Fix dark mode

--- a/sla/apps/explorer-frontend/components/DataTable/styles.module.css
+++ b/sla/apps/explorer-frontend/components/DataTable/styles.module.css
@@ -16,8 +16,8 @@
 	display: flex;
 	flex-direction: row;
 	width: 100%;
-	background-color: #fff;
-	border-bottom: 1px solid #e0e0e0;
+	background-color: var(--color-system-background-100);
+	border-bottom: 1px solid var(--color-system-border-100);;
 }
 
 /* * */
@@ -27,7 +27,7 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	background-color: #fff;
+	background-color: var(--color-system-background-100);
 }
 
 /* * */
@@ -49,7 +49,7 @@
 }
 
 .body .row:hover {
-	background-color: var(--color-system-background-300);
+	background-color: var(--color-system-background-200);
 }
 
 /* * */
